--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.0",
+    "tailwindcss": "^3.1.8",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
