--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.0",
-    "tailwindcss": "^3.1.8",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -20,6 +19,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
